--- a/modernUI-tailwind-css/src/input.css
+++ b/modernUI-tailwind-css/src/input.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  @apply bg-secondary text-white px-9 py-3 rounded-lg capitalize font-bold hover:opacity-80 ease-in duration-200;
+}
+
+.title {
+  @apply text-3xl md:text-5xl font-bold leading-snug;
+}
+
+.user-pic.active-pic {
+  border: 2px solid #ff7d3b;
+}
+
+.user-text {
+  display: none;
+}
+
+.user-text.active-text {
+  display: block;
+  animation: moveup 1s linear forwards;
+}
+
+.user-pic {
+  transition: all 0.2s ease;
+}
+
+@keyframes moveup {
+  0% {
+    margin-top: 40px;
+    opacity: 0;
+  }
+  50% {
+    margin-top: 20px;
+    opacity: 0.1;
+  }
+  100% {
+    margin-top: 0px;
+    opacity: 1;
+  }
+}
