--- a/scent-site-tailwind/src/input.css
+++ b/scent-site-tailwind/src/input.css
@@ -3,3 +3,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  @apply scroll-smooth overflow-x-hidden;
+}
+
+body {
+  @apply bg-bodyColor font-jost text-textColor tracking-wider overflow-x-hidden;
+}
+
+section {
+  @apply py-16 md:py-28;
+}
+
+.nav-link {
+  @apply text-lg font-bold hover:text-titleColor transition duration-300 ease-in;
+}
+
+.active {
+  @apply text-titleColor;
+}
+
+.btn {
+  @apply border text-lg lg:text-2xl font-bold px-5 py-3 duration-300;
+}
+
+.btn2 {
+  @apply border text-lg lg:text-xl font-bold px-3 py-2 duration-300;
+}
+
+.btn:hover,
+.btn2:hover {
+  @apply bg-titleColor;
+}
+
+.title {
+  @apply text-4xl font-bold inline-block font-dancing;
+}
+
+.subtitle {
+  @apply text-3xl md:text-4xl lg:text-5xl font-bold;
+}
+
+.cardtitle {
+  @apply text-2xl md:text-3xl font-bold;
+}
+
+.cardtitle-2 {
+  @apply text-xl md:text-2xl xl:text-3xl font-bold;
+}
