--- a/car-rental/src/input.css
+++ b/car-rental/src/input.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container {
+  @apply w-[90VW] mx-auto;
+}
+
+.btnColor {
+  background-color: #3c4286;
+}
+.btnHover:hover {
+  background-color: #3c4286;
+  color: white;
+  transition: all 0.5s ease-in-out;
+}
+
+.btnNonHover:hover {
+  @apply bg-slate-100 text-black duration-150 ease-in border-2;
+}
