--- a/car-rental/style.css
+++ b/car-rental/style.css
@@ -596,8 +596,24 @@ video {
   position: relative;
 }
 
-.left-10 {
-  left: 2.5rem;
+.-left-12 {
+  left: -3rem;
+}
+
+.-left-28 {
+  left: -7rem;
+}
+
+.-right-12 {
+  right: -3rem;
+}
+
+.-right-28 {
+  right: -7rem;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .left-\[15\%\] {
@@ -608,128 +624,24 @@ video {
   top: 0px;
 }
 
-.top-\[-15\%\] {
-  top: -15%;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.left-24 {
-  left: 6rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.bottom-20 {
-  bottom: 5rem;
-}
-
-.left-32 {
-  left: 8rem;
-}
-
-.right-20 {
-  right: 5rem;
-}
-
 .top-20 {
   top: 5rem;
 }
 
-.right-10 {
-  right: 2.5rem;
-}
-
-.top-\[45vh\] {
-  top: 45vh;
-}
-
-.top-\[80vh\] {
-  top: 80vh;
-}
-
-.top-\[75vh\] {
-  top: 75vh;
-}
-
-.left-20 {
-  left: 5rem;
+.top-\[-15\%\] {
+  top: -15%;
 }
 
 .top-\[42vh\] {
   top: 42vh;
 }
 
-.right-32 {
-  right: 8rem;
+.top-\[75vh\] {
+  top: 75vh;
 }
 
-.-left-20 {
-  left: -5rem;
-}
-
-.-left-28 {
-  left: -7rem;
-}
-
-.-left-36 {
-  left: -9rem;
-}
-
-.-left-32 {
-  left: -8rem;
-}
-
-.-right-32 {
-  right: -8rem;
-}
-
-.-right-24 {
-  right: -6rem;
-}
-
-.-left-24 {
-  left: -6rem;
-}
-
-.-left-16 {
-  left: -4rem;
-}
-
-.-left-12 {
-  left: -3rem;
-}
-
-.-right-12 {
-  right: -3rem;
-}
-
-.-left-10 {
-  left: -2.5rem;
-}
-
-.-right-28 {
-  right: -7rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.top-\[60vh\] {
-  top: 60vh;
-}
-
-.top-\[90vh\] {
-  top: 90vh;
+.top-\[80vh\] {
+  top: 80vh;
 }
 
 .-z-10 {
@@ -744,26 +656,9 @@ video {
   z-index: 20;
 }
 
-.order-1 {
-  order: 1;
-}
-
-.order-2 {
-  order: 2;
-}
-
-.order-3 {
-  order: 3;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
 }
 
 .my-16 {
@@ -771,9 +666,9 @@ video {
   margin-bottom: 4rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 .my-6 {
@@ -797,12 +692,36 @@ video {
   margin-top: 1rem;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-28 {
+  margin-top: 7rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
 .inline-block {
   display: inline-block;
 }
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -813,28 +732,12 @@ video {
   height: 4rem;
 }
 
-.h-\[30vh\] {
-  height: 30vh;
-}
-
-.h-\[4px\] {
-  height: 4px;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
-}
-
 .h-\[100vh\] {
   height: 100vh;
 }
 
-.h-\[40vh\] {
-  height: 40vh;
-}
-
-.h-\[70vh\] {
-  height: 70vh;
+.h-\[4px\] {
+  height: 4px;
 }
 
 .h-\[50vh\] {
@@ -845,28 +748,16 @@ video {
   height: 55vh;
 }
 
-.h-\[100v\] {
-  height: 100v;
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .max-h-screen {
   max-height: 100vh;
-}
-
-.max-h-\[100vh\] {
-  max-height: 100vh;
-}
-
-.max-h-\[100v\] {
-  max-height: 100v;
 }
 
 .w-2\/3 {
@@ -875,6 +766,10 @@ video {
 
 .w-36 {
   width: 9rem;
+}
+
+.w-44 {
+  width: 11rem;
 }
 
 .w-8 {
@@ -893,14 +788,6 @@ video {
   width: 100%;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
-.w-44 {
-  width: 11rem;
-}
-
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -911,10 +798,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-col-reverse {
-  flex-direction: column-reverse;
 }
 
 .items-start {
@@ -931,10 +814,6 @@ video {
 
 .justify-start {
   justify-content: flex-start;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -973,6 +852,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .space-x-12 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(3rem * var(--tw-space-x-reverse));
@@ -987,12 +870,24 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border-2 {
   border-width: 2px;
 }
 
 .border-4 {
   border-width: 4px;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-white {
@@ -1005,11 +900,6 @@ video {
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
 .bg-slate-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
@@ -1020,19 +910,8 @@ video {
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.from-orange-700 {
-  --tw-gradient-from: #c2410c var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(194 65 12 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-orange-600 {
@@ -1041,12 +920,18 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-orange-500 {
-  --tw-gradient-to: #f97316 var(--tw-gradient-to-position);
+.from-orange-700 {
+  --tw-gradient-from: #c2410c var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(194 65 12 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .to-orange-400 {
   --tw-gradient-to: #fb923c var(--tw-gradient-to-position);
+}
+
+.to-orange-500 {
+  --tw-gradient-to: #f97316 var(--tw-gradient-to-position);
 }
 
 .p-0 {
@@ -1055,10 +940,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
 }
 
 .px-10 {
@@ -1081,16 +962,6 @@ video {
   padding-right: 1.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1101,8 +972,36 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pt-12 {
   padding-top: 3rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .text-center {
@@ -1119,6 +1018,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1132,11 +1036,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .font-bold {
@@ -1175,14 +1074,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.opacity-50 {
-  opacity: 0.5;
-}
-
-.opacity-70 {
-  opacity: 0.7;
-}
-
 .opacity-30 {
   opacity: 0.3;
 }
@@ -1191,6 +1082,24 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.ease-linear {
+  transition-timing-function: linear;
 }
 
 .container {
@@ -1203,20 +1112,55 @@ video {
   background-color: #3c4286;
 }
 
-.btnHover:hover {
+/* .btnHover:hover {
   background-color: #3c4286;
   color: white;
   transition: all 0.5s ease-in-out;
+} */
+
+.btnHover:hover {
+  border-width: 2px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(60 66 134 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .btnNonHover:hover {
   border-width: 2px;
   --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
   transition-duration: 150ms;
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.hover\:border-black:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.hover\:bg-orange-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+}
+
+.hover\:text-orange-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:bg-orange-500 {
@@ -1229,27 +1173,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-@media (min-width: 640px) {
-  .sm\:order-2 {
-    order: 2;
-  }
-
-  .sm\:order-1 {
-    order: 1;
-  }
-
-  .sm\:order-3 {
-    order: 3;
-  }
-}
-
 @media (min-width: 768px) {
   .md\:hidden {
     display: none;
-  }
-
-  .md\:h-\[70\] {
-    height: 70;
   }
 
   .md\:h-\[70vh\] {
@@ -1258,36 +1184,28 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:left-32 {
-    left: 8rem;
-  }
-
-  .lg\:right-32 {
-    right: 8rem;
-  }
-
   .lg\:left-10 {
     left: 2.5rem;
+  }
+
+  .lg\:left-32 {
+    left: 8rem;
   }
 
   .lg\:right-10 {
     right: 2.5rem;
   }
 
+  .lg\:right-32 {
+    right: 8rem;
+  }
+
   .lg\:top-0 {
     top: 0px;
   }
 
-  .lg\:order-none {
-    order: 0;
-  }
-
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:h-\[70vh\] {
-    height: 70vh;
   }
 
   .lg\:w-1\/2 {
@@ -1304,6 +1222,10 @@ video {
 
   .lg\:w-auto {
     width: auto;
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
@@ -1326,10 +1248,6 @@ video {
   .lg\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:opacity-0 {
-    opacity: 0;
   }
 
   .lg\:opacity-100 {
