complete hero category and faq section

--- a/html-css-js-projects/education-web/assets/css/style.css
+++ b/html-css-js-projects/education-web/assets/css/style.css
@@ -25,7 +25,7 @@
   --container-width-md: 90%;
   --container-width-sm: 94%;
 
-  --transition: all 400ms ease;
+  --transition: all 300ms ease;
 }
 
 body {
@@ -33,4 +33,285 @@ body {
   line-height: 1.7;
   color: var(--color-white);
   background: var(--color-bg);
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+section {
+  padding: 6rem 0;
+}
+
+section h2 {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: 2.4rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.6rem;
+}
+
+h4 {
+  font-size: 1.3rem;
+}
+
+a {
+  color: var(--color-white);
+}
+
+img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.btn {
+  display: inline-block;
+  background: var(--color-white);
+  color: var(--color-black);
+  padding: 1rem 2rem;
+  border: 1px solid transparent;
+  font-weight: 500;
+  transition: var(--transition);
+}
+
+.btn:hover {
+  background: transparent;
+  color: var(--color-white);
+  border-color: var(--color-white);
+}
+
+.btn-primary {
+  background: var(--color-danger);
+  color: var(--color-white);
+}
+
+/* navbar */
+nav {
+  background: transparent;
+  width: 100%;
+  height: 5rem;
+  position: sticky;
+  top: 0;
+  z-index: 11;
+}
+
+/* change navbar style on scroll */
+.window-scroll {
+  background: var(--color-primary);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+}
+
+.nav_container {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav button {
+  display: none;
+}
+
+.nav_menu {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  gap: 4rem;
+}
+
+.nav_menu a {
+  font-size: 0.9rem;
+  transition: var(--transition);
+}
+
+.nav_menu a:hover {
+  color: var(--color-bg2);
+}
+
+/* hero section */
+.hero {
+  position: relative;
+  /* top: 5rem; */
+  overflow: hidden;
+  height: 70vh;
+  margin-bottom: 5rem;
+}
+
+.hero_container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 5rem;
+  height: 100%;
+}
+
+.hero_left p {
+  margin: 1rem 0 2.4rem;
+}
+
+/* Categories */
+.categories {
+  background: var(--color-bg1);
+  height: 29rem;
+}
+
+.categories h1 {
+  line-height: 1;
+  margin-bottom: 3rem;
+}
+
+.categories_container {
+  display: grid;
+  grid-template-columns: 40% 60%;
+  /* gap: 4rem; */
+}
+
+.categories_left {
+  margin-right: 4rem;
+}
+
+.categories_left p {
+  margin: 1rem 0 3rem;
+}
+
+.categories_right {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.2rem;
+}
+
+.category {
+  background: var(--color-bg2);
+  padding: 1.8rem;
+  border-radius: 2rem;
+  transition: var(--transition);
+}
+
+.category:hover {
+  box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
+.category:nth-child(2) .category_icon {
+  background: var(--color-danger);
+}
+
+.category:nth-child(3) .category_icon {
+  background: var(--color-success);
+}
+
+.category:nth-child(4) .category_icon {
+  background: var(--color-warning);
+}
+
+.category:nth-child(5) .category_icon {
+  background: var(--color-success);
+}
+
+.category_icon {
+  background: var(--color-primary);
+  padding: 0.7rem;
+  border-radius: 0.9rem;
+  font-size: 1.5rem;
+}
+
+.category h4 {
+  margin: 1rem 0 0.7rem;
+}
+
+.category p {
+  font-size: 0.85rem;
+}
+
+/* Courses */
+.courses {
+  margin-top: 10rem;
+}
+
+.course_container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.course {
+  background: var(--color-bg1);
+  text-align: center;
+  border: 1px solid transparent;
+  transition: var(--transition);
+}
+
+.course:hover {
+  background: transparent;
+  border-color: var(--color-primary);
+}
+
+.course_info {
+  padding: 2rem;
+}
+
+.course_info p {
+  margin: 1.2rem 0 2rem;
+  font-size: 0.9rem;
+}
+
+/* FAQs */
+.faqs {
+  background: var(--color-bg1);
+  box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
+}
+
+.faqs_container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.faq {
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  height: fit-content;
+  background: var(--color-primary);
+  cursor: pointer;
+}
+
+.faq h4 {
+  font-size: 1rem;
+  line-height: 2.2;
+}
+
+.faq_icon {
+  align-self: flex-start;
+  font-size: 1.2rem;
+}
+
+.faq p {
+  margin-top: 0.8rem;
+  display: none;
+}
+
+.faq.open p {
+  display: block;
 }
